Add some figures for highlight and link creation.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -21,7 +21,6 @@
 \usetikzlibrary{shapes.misc}
 \usepackage{subfig}
 \usepackage{longtable}
-\usepackage{caption}
 \usepackage{multirow}
 \usepackage{tabulary}
 \usepackage{hyperref}
@@ -132,7 +131,7 @@
 \setlength\parindent{24pt}
 
 % Figure caption with special fonts.
-\usepackage[font=small,labelfont=bf]{caption}
+\usepackage[font=small,labelfont=bf,format=plain]{caption}
 
 % Smaller margins. Paper is expensive and we write in bug characters.
 \usepackage[margin=1in]{geometry}
