--- a/src/TableBDVNavigationKeys.tex
+++ b/src/TableBDVNavigationKeys.tex
@@ -10,22 +10,22 @@
     Move in X \& Y.                 & \keys{Right-click} and \keys{Drag}.
     \\ \midrule
     
-    Move in Z.                      & \keys{Mouse-wheel}. Press and hold \keys{Shift} to move faster, \keys{Control} to move slower.
+    Move in Z.                      & \keys{Mouse-wheel}. Press and hold \keys{\shift} to move faster, \keys{\ctrl} to move slower.
     \\ \midrule
     
     Align view with X / Y / Z axes. &  
     \begin{minipage}[t]{0.7\textwidth}
     \begin{myitemize}
-        \item  Align with XY plane: \keys{Shift+Z}. 
-        \item Align with YZ plane: \keys{Shift+X}. 
-        \item Align with XZ plane: \keys{Shift+C} or \keys{Shift+Y}. 
+        \item  Align with XY plane: \keys{\shift+Z}. 
+        \item Align with YZ plane: \keys{\shift+X}. 
+        \item Align with XZ plane: \keys{\shift+C} or \keys{\shift+Y}. 
     \end{myitemize}
     The view will rotate around the location you clicked.
     \end{minipage}
     
     \\ \midrule
     
-    Zoom / Unzoom.                  & \keys{Control+Shift+Mouse-wheel} or \keys{Command+Mouse-wheel}. The view will zoom and unzoom around the mouse location.
+    Zoom / Unzoom.                  & \keys{\ctrl+\shift+Mouse-wheel} or \keys{\cmd+Mouse-wheel}. The view will zoom and unzoom around the mouse location.
     \\ \midrule
 
     \multicolumn{2}{c}{\textit{Time-points.}}
@@ -40,7 +40,7 @@
     \multicolumn{2}{c}{\textit{Bookmarks.}}
     \\ \midrule
 
-    Store a bookmark.               & \keys{Shift+B} then press any key to store a bookmark with this key as name. A bookmark stores the position, zoom and orientation in the view but not the time-point. Bookmarks are saved in display settings file.
+    Store a bookmark.               & \keys{\shift+B} then press any key to store a bookmark with this key as name. A bookmark stores the position, zoom and orientation in the view but not the time-point. Bookmarks are saved in display settings file.
     \\ \midrule
     
     Recall a bookmark.              & Press \keys{B} then the key of the bookmark.
@@ -58,7 +58,7 @@
     Brightness and color dialog.    & Press \keys{S}. In this dialog you can adjust the min \& max for each source, select to what sources these min \& max apply and pick a color for each source.
     \\ \midrule
     
-    Toggle fused mode.              & Press \keys{F}. In fused mode, several sources are overlaid. Press \keys{Shift+1}, \keys{Shift+2} \ldots to add / remove the source to the view. In single-source mode, only one source is shown.
+    Toggle fused mode.              & Press \keys{F}. In fused mode, several sources are overlaid. Press \keys{\shift+1}, \keys{\shift+2} \ldots to add / remove the source to the view. In single-source mode, only one source is shown.
     \\ \midrule
     
     Visibility and grouping dialog.     & Press \keys{F6}. In this dialog you can define what sources are visible in fused mode, and define groups of sources for use in the grouping mode.
