--- a/src/TableTrackSchemeNavigationKeys.tex
+++ b/src/TableTrackSchemeNavigationKeys.tex
@@ -10,13 +10,13 @@
     Move around.                    & \keys{Right-click} and \keys{Drag} or \keys{Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in X.             & \keys{Shift+Mouse-wheel}
+    Zoom / unzoom in X.             & \keys{\shift+Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in Y.             & \keys{Control+Mouse-wheel}
+    Zoom / unzoom in Y.             & \keys{\ctrl+Mouse-wheel}
     \\ \midrule
     
-    Zoom / unzoom in X \& Y.         & \keys{Control+Shift+Mouse-wheel}
+    Zoom / unzoom in X \& Y.         & \keys{\ctrl+\shift+Mouse-wheel}
     \\ \midrule
 
     Full zoom, full unzoom.         & Press \keys{Z}. The view zoom at max level to the mouse location. Pressing  \keys{Z} again to unzoom fully.
