--- a/src/Chapter4.tex
+++ b/src/Chapter4.tex
@@ -1,5 +1,15 @@
 \section{Getting your bearings in large datasets.}
 
+In the previous chapter we have seen how to edit single spots and links within a Mastodon model.
+As we said before, the goal of Mastodon is to let you harness very large images, for which the number of annotations can be very large too.
+It can be very easy to get lost within such large images and loose track of where we are within the sample image and what cell we follow. 
+So we have added several features that are made especially to get your bearings in large datesets.
+More than anything, these features are about giving visual cues that ease orientation, and exploit event that a human eye would consider salient. 
+We took some inspiration from video-games, that are very good at communicating condensed and synthetic information to the player
+(but only for a limited part; there is no screenshake when you delete a spot).
+
+
+
 \subsection{Bookmarks in the BDV views.}
 
 \subsection{Linking several views together.}
